--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "aws-sdk": "^2.1417.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+
     "react-router-dom": "^6.14.2",
+
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
