--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-
     "react-router-dom": "^6.14.2",
-
+    "react-social-media-embed": "^2.3.5",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
