--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "start": "node src/App.jsx",
+    "start": "react-scripts start",
     "preview": "vite preview"
   },
   "dependencies": {
