--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "vite": "^4.4.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
